# fastapi-post-office

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
fapo/: __init__.py
fastapi_post_office/: __init__.py  config.py
fastapi_post_office/admin/: __init__.py  mount.py
fastapi_post_office/backends/: __init__.py  base.py  console.py  http_base.py  postmark.py  sendgrid.py  sendpulse.py  ses.py  smtp.py
fastapi_post_office/cli/: main.py  sync_templates.py
fastapi_post_office/db/: __init__.py  async_repository.py  base.py  models.py  repository.py  session.py  session_async.py
fastapi_post_office/providers/: __init__.py  registry.py
fastapi_post_office/service/: __init__.py  async_email_service.py  composer.py  email_service.py  idempotency.py  validator.py
fastapi_post_office/tasks/: __init__.py  celery_app.py  periodic.py  send.py
fastapi_post_office/templates/: __init__.py  hasher.py  loader.py  manifest.py  renderer.py
fastapi_post_office/utils/: __init__.py  redaction.py
fastapi_post_office/webhooks/: __init__.py  handler.py
tests/: conftest.py  test_package_init.py
tests/test_admin/: test_admin.py
tests/test_async/: test_async_idempotency.py  test_async_repository.py  test_async_service.py  test_async_session.py
tests/test_backends/: test_backend_factory.py  test_console_backend.py  test_http_base.py  test_provider_payloads.py  test_ses_backend.py  test_smtp_backend.py
tests/test_cli/: test_cli_main.py  test_sync_templates.py  test_sync_templates_errors.py
tests/test_config/: test_config.py
tests/test_providers/: test_backends_v11.py  test_registry.py
tests/test_renderer/: test_renderer.py  test_renderer_security.py
tests/test_service/: test_email_service.py  test_idempotency.py  test_repository.py  test_suppression.py  test_validator.py
tests/test_tasks/: test_retries.py  test_tasks_execution.py  test_tasks_imports.py
tests/test_templates/: test_hasher.py  test_loader_limits.py  test_manifest.py  test_templates.py
tests/test_utils/: test_utils.py
tests/test_webhooks/: test_webhooks.py  test_webhooks_errors.py
