[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-post-office"
version = "0.1.0"
description = "Production-ready transactional email delivery for FastAPI/Python: versioned templates, DB persistence, Celery retries, and pluggable providers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "William Bolívar", email = "williamjbolivar@gmail.com" }
]
keywords = ["fastapi", "email", "celery", "sqlalchemy", "jinja2", "transactional-email", "templates"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications :: Email",
]

dependencies = [
  # Core
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typing-extensions>=4.7; python_version < '3.11'",

  # CLI
  "typer>=0.12",
  "rich>=13.7",

  # Utils
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
# SMTP provider (async-friendly, even if core is sync)
smtp = [
  "aiosmtplib>=3.0",
]

# Celery integration (broker agnostic)
celery = [
  "celery>=5.3",
]

# Admin UI for DEV inspection (optional)
admin = [
  "sqladmin>=0.16",
  "starlette>=0.36",
]

# Common DB drivers (optional; keep core driver-free)
db-postgres = [
  "psycopg[binary]>=3.1",
]
db-mysql = [
  "pymysql>=1.1",
]
db-sqlite-async = [
  "aiosqlite>=0.20",
]

# Observability (optional)
observability = [
  "structlog>=24.1",
]

# Developer tooling
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "freezegun>=1.4",
  "aiosqlite>=0.20",
  "ruff>=0.6",
  "black>=24.3",
  "mypy>=1.10",
  "types-python-dateutil>=2.9",
]

# All-in-one convenient extra for contributors
all = [
  "fastapi-post-office[smtp,celery,admin,db-postgres,db-sqlite-async,observability]",
]

[project.scripts]
fapo = "fastapi_post_office.cli.main:app"

[project.urls]
Homepage = "https://github.com/wjbolivar/fastapi-post-office"
Repository = "https://github.com/wjbolivar/fastapi-post-office"
Issues = "https://github.com/wjbolivar/fastapi-post-office/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_post_office", "fapo"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # allow long lines where appropriate

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings --cov=fastapi_post_office --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fastapi_post_office"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
